--- a/style/styles.css
+++ b/style/styles.css
@@ -30,7 +30,8 @@
     display: none;
 }
 p{
-    color: rgb(204, 204, 204);
+    color: #ffffff;
+    opacity: 80%;
 }
 .buttons{
     padding: 12px 20px;
@@ -149,6 +150,50 @@ body{
 }
 
 
+/*podcast section*/
+.podcast-container{
+    width: 80%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+}
+.divider{
+    border: 1px solid white;
+    opacity: 10%;
+    margin-top: 80px;
+}
+.podcast-cards{
+    margin-top: 80px;
+    margin-bottom: 120px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 80px;
+}
+.podcast-section-title{
+    color: #ffffff;
+    font-size: 3rem;
+    margin-top: 50px;
+    margin-bottom: 16px;
+}
+.podcast-section-text{
+    line-height: 200%;
+}
+.podcast-cards h2{
+    color: #00FF88;
+    font-size: 3rem;
+    font-weight: 900;
+}
+.podcast-cards p{
+    font-size: 1rem;
+    font-weight: 400;
+}
+.star::before{
+    content: "★";
+    color: #00FF88;
+}
+
+
 
 
 
@@ -170,9 +215,29 @@ body{
         width: 24px;
     }
 
-    .microphone{
+    /* .microphone{
         height: 200px;
         width: 200px;
         background-size: contain;
+    } */
+
+   
+    .podcast-container{
+        width: 90%;
+    }
+    .podcast-cards{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    }
+    .divider{
+    margin-top: 40px;
+    }
+    .podcast-section-title{
+        font-size: 2rem;
+    }
+    .podcast-cards h2{
+        font-size: 2.5rem;
     }
 }
