--- a/style/styles.css
+++ b/style/styles.css
@@ -199,7 +199,7 @@ body{
     justify-content: center;
     /* text-align: center; */
     align-items: center;
-    padding: 120px 200px;
+    padding: 100px 200px;
 }
 .why-choose-title{
     font-size: 3rem;
@@ -237,6 +237,59 @@ body{
 }
 .why-card p{
     opacity: 60%;
+}
+
+
+/*featured episodes section*/
+.featured-episodes{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 200px;
+    gap: 40px;
+}
+.featured-title{
+    font-size: 3rem;
+    color: #ffffff;
+}
+.featured-card-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+.featured-card{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    /* border: 3px solid red; */
+    border-radius: 40px;
+    /* overflow: hidden; */
+}
+.featured-card-content{
+    padding: 30px;
+    /* border: 2px solid red; */
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 16px;
+}
+.video-wrap{
+    border-radius: 40px 40px 0 0;
+    overflow: hidden;
+}
+.featured-card-content h3{
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+.featured-card-content p{
+    opacity: 60%;
+}
+.duration{
+    gap: 10px;
+}
+.duration h4{
+    color: #00FF88;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 
