--- a/style/styles.css
+++ b/style/styles.css
@@ -187,6 +187,7 @@ body{
 .podcast-cards p{
     font-size: 1rem;
     font-weight: 400;
+    line-height: 24px;
 }
 .star::before{
     content: "★";
@@ -237,6 +238,7 @@ body{
 }
 .why-card p{
     opacity: 60%;
+    line-height: 24px;
 }
 
 
@@ -289,6 +291,7 @@ body{
 }
 .featured-card-content p{
     opacity: 60%;
+    line-height: 24px;
 }
 .duration{
     gap: 10px;
@@ -310,6 +313,7 @@ body{
 .host-section-title{
     font-size: 3rem;
     color: #ffffff;
+    font-weight: 700;
 }
 .host-card{
     margin: 0 200px 120px;
@@ -319,6 +323,7 @@ body{
     justify-content: center;
     align-items: center;
 }
+
 .host-info{
     flex-direction: column;
     gap: 16px;
@@ -330,6 +335,7 @@ body{
 }
 .host-info p{
     opacity: 60%;
+    line-height: 24px;
 }
 .host-social-icons{
     gap: 8px;
@@ -435,4 +441,31 @@ body{
     .featured-card-container{
         gap: 16px;
     }
+
+
+    .host-section{
+        gap: 24px;
+    }
+    .host-section-title{
+        font-size: 2rem;
+    }
+    .host-card{
+        flex-direction: column;
+        margin: 0 20px 40px;
+        padding: 24px;
+        gap: 16px;
+    }
+    .host-info{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 16px;
+    }
+    .host-info h3{
+        font-size: 1.5rem;
+    }
+    .host-img{
+        width: 150px;
+}
+    
 }
