--- a/style/styles.css
+++ b/style/styles.css
@@ -393,6 +393,11 @@ p{
     flex-direction: column;
     min-height: 45vh;
     width: 100%;
+}
+.footer-content{
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     gap: 32px;
 }
 .brand{
@@ -408,6 +413,28 @@ p{
     gap: 8px;
 }
 
+
+/*Animation*/
+.microphone{
+    animation: heartbeat 0.8s infinite ease-in-out;
+}
+@keyframes heartbeat {
+    0%, 100%{
+        transform: scale(1);
+    }
+    14%{
+        transform: scale(1.04);
+    }
+    28%{
+        transform: scale(1);
+    }
+    42%{
+        transform: scale(1.01);
+    }
+    56%{
+        transform: scale(1);
+    }
+}
 
 
 
@@ -560,6 +587,9 @@ p{
         background-position: center;
         background-color: #210f40;
         min-height: 30vh;
+    }
+    .footer-content{
+        padding: 20px;
         gap: 20px;
         text-align: center;
     }
@@ -567,9 +597,10 @@ p{
         font-size: 2.2rem;
     }
     .platform-info{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        width: 70%;
+        gap: 15px;
         justify-content: center;
         align-items: center;
     }
