added some transormations, links, and some small necessary changes

--- a/style/styles.css
+++ b/style/styles.css
@@ -46,6 +46,13 @@ p{
     align-items: center;
 }
 
+.listen-on-spotify-btn:hover,
+.subscribe-hero-btn:hover,
+.navbar-btn:hover{
+    transform: scale(1.05);
+    transition: transform 0.5s ease;
+}
+
 
 /* body{
     width: 100%;
@@ -77,6 +84,9 @@ p{
     text-decoration: none;
     color: #ffffff;
     font-size: 1rem;
+}
+.menu a:hover{
+    color: #00FF88;
 }
 .logo{
     color: #ffffff;
@@ -271,6 +281,11 @@ p{
     opacity: 60%;
     line-height: 24px;
 }
+.why-card:hover{
+    transform: scale(1.01);
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #716686;
+}
 
 
 /*featured episodes section*/
@@ -379,6 +394,10 @@ p{
     display: grid;
     place-items: center;
 }
+.host-social-icons .icons:hover img{
+    transform: scale(1.3);
+    transition: transform 0.5s ease-in-out;
+}
 
 
 
@@ -411,6 +430,9 @@ p{
 .platform{
     display: flex;
     gap: 8px;
+}
+.platform a{
+    text-decoration: none;
 }
 
 
