--- a/style/styles.css
+++ b/style/styles.css
@@ -162,11 +162,15 @@ p{
     font-size: 3.8rem;
     color: #ffffff;
 }
+.hero-text{
+    flex-direction: column;
+    gap: 10px;
+}
 .hero-text p{
     opacity: 60%;
 }
 .group-btn{
-    margin-top: 20px;
+    margin-top: 16px;
     gap: 10px;
     justify-content: center;
     align-items: center;
@@ -626,7 +630,171 @@ p{
         justify-content: center;
         align-items: center;
     }
+}
 
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+@media screen and (min-width: 576.01px) and (max-width: 768px){
+    .navbar{
+        padding: 16px 20px;
+        flex-wrap: wrap;
+    }
+    .navbar-btn,
+    .menu{
+        display: none;
+    }
+    .logo{
+        font-size: 2rem;
+    }
+    #hamburger-menu{
+        display: inline;
+        width: 24px;
+    }
 
     
+    /*hero*/
+    .hero-section{
+        min-height: 470px;
+        padding: 0 12px;
+        background-size: contain;
+        background-position: center 50px;
+        position: relative;
+        background-color: #1A0B2E;
+    }
+    .hero-content{
+        padding: 0 10px;
+        gap: 20px;
+        position: absolute;
+        top: 8%;
+    }
+    .microphone{
+        width: 200px;
+        margin-bottom: 20px;
+    }
+    .hero-title{
+        font-size: 2.5rem;
+    }
+    .group-btn{
+        flex-wrap: wrap;
+    }
+    .new-badge{
+        top: 2%;
+        right: 2%;
+    }
+    
+
+   
+    /*podcast*/
+    .podcast-container{
+        padding: 50px 20px;
+    }
+    .podcast-cards{
+    margin-top: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    }
+    .podcast-content{
+        width: 90%;
+    }
+    .divider{
+    margin-top: 40px;
+    }
+    .podcast-section-title{
+        font-size: 2rem;
+    }
+    .podcast-cards h2{
+        font-size: 2.5rem;
+    }
+
+
+    .why-choose{
+        padding: 40px 20px;
+    }
+    .why-choose-title{
+        font-size: 2rem;
+        align-self: center;
+        margin-bottom: 16px;
+    }
+    .why-card-container{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 16px;
+    }
+    .why-card-container .why-card:nth-child(2),
+    .why-card-container .why-card:nth-child(3),
+    .why-card-container .why-card:nth-child(4){
+        grid-column: span 1;
+    }
+    .why-card{
+        padding: 24px;
+    }
+
+
+    .featured-episodes{
+        padding: 40px 20px;
+        gap: 24px;
+    }
+    .featured-title{
+        font-size: 2rem;
+    }
+    .featured-card-container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 16px;
+    }
+    .featured-card-content h3{
+        font-size: 1.25rem;
+    }
+    .featured-card-container{
+        gap: 16px;
+    }
+
+
+    .host-section{
+        gap: 24px;
+    }
+    .host-section-title{
+        font-size: 2rem;
+    }
+    .host-card{
+        flex-direction: column;
+        margin: 0 20px 40px;
+        padding: 24px;
+        gap: 16px;
+    }
+    .host-info{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 16px;
+    }
+    .host-info h3{
+        font-size: 1.5rem;
+    }
+    .host-img{
+        width: 150px;
+    }
+
+
+    .footer-section{
+        background-size: contain;
+        background-position: center;
+        background-color: #210f40;
+        min-height: 30vh;
+    }
+    .footer-content{
+        padding: 20px;
+        gap: 20px;
+        text-align: center;
+    }
+    .brand{
+        font-size: 2.2rem;
+    }
+    .platform-info{
+        display: flex;
+        flex-wrap: wrap;
+        width: 70%;
+        gap: 15px;
+        justify-content: center;
+        align-items: center;
+    }
 }
